[8.January 2009]
- passwordedit.rb: RD->RDoc
- topmenu.rb: added change_proc feature (argument of FVC...new has always
  been there, but didn't do anything), removed class DisplayModeChooseButton
  (not needed - FVConfiguratorButton with right Proc can do the same work)
- initfv.rb: DisplayModeChooseButton replaced with FVConfiguratorButton

[5.January 2009]
- removed content of directory ext/ (old compiled replacement for critical 
  classes)
- config/log4rconfig.rb: created special log for loading of configuration
  and one common log for all cases where I'm too lazy to create new one.
- freevikings.rb: configuration file is first searched in
  $FREEVIKINGS_HOME, than in $HOME/.freeVikings
- location.rb: configurable order of vikings
- fvdef.rb: added missing slash which caused error in all levels with objects
  using GfxTheme.

[2.January 2009]
- freevikings.rb: doesn't load personal config if HOME env. variable isn't defined

[1.January 2009]
- collisiontest.rb: RD->RDoc (why don't I move this to SchwerEngine?)
- alternatives.rb: removed (remaining corpse of the compiled extensions 
  will be removed soon)
- all files which deal with configuration: configuration files fully enabled
- configuration.rb: on errors name of configuration file is reported;
  Proc with condition can be used in the structure-defining script;
  script loading is SyntaxError-safe
- game.rb: music volume configurability

[31.December 2008]
- fvdef.rb, initfv.rb: panel placement may be set in menu;
  submenu "Graphics" is 50px wider than the rest (because of it)
- topmenu.rb: RD->RDoc
- bottompanelstate.rb: in ItemsExchangeBottomPanelState keys up and down
  are synonyms for left and right (to make it more natural when
  BottomPanel is placed vertically)
- game.rb: fixed mouse controls for BottomPanel in right position
- game.rb, gamestate.rb, bottompanel.rb, bpvikingview.rb: 
  F5 switches panel position in-game
- bottompanel.rb, trash.rb: when an item is dropped into the trash,