@@ -14,8 +14,12 @@ CONFIG = {
   ### FILES
   'Files' => {
 
-    # Array of directories where freeVikings will look for sets of levels
-    'levels' => ['locs/DefaultCampaign'],
+    # Array of directories whose subdirectories will be considered as
+    # campaign directories
+    'dirs with campaigns' => ['locs'],
+
+    # Name of campaign which should be played by default
+    'default campaign' => 'Default Campaign',
 
     # where directories gfx/ and music/ are
     'media' => '.'
