@@ -5,7 +5,8 @@
 
 CONFIG = {
   'Files' => {
-    'levels' => Array,
+    'dirs with campaigns' => Array,
+    'default campaign' => String,
     'media' => String
   },
   'Video' => {
